# dq

./: db.sqlite3  pyproject.toml
consulta/: admin.py  models.py
consulta/migrations/: 0001_initial.py
core/: settings.py  urls.py
paciente/: admin.py  models.py
paciente/migrations/: 0001_initial.py
