[tool.poetry]
name = "clinica"
version = "0.1.0"
description = ""
authors = ["Raphael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-admin-adminlte = "^1.0.5"
django-adminlte3 = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
